--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -9,7 +9,7 @@ a{
   text-decoration: none;
   color: white;
 }
-input,textarea{
+input,textarea,select{
   display: block;
   background-color: #316282;
   color: $white-text;
