--- a/src/assets/scss/utils.scss
+++ b/src/assets/scss/utils.scss
@@ -23,6 +23,13 @@ button{
   box-shadow: 0px 0px 6px $background-purple;
 }
 
+.header{
+  padding: 10px;
+  margin-bottom: 20px;
+  background-color: $background-purple;
+  font-size: 20px;
+}
+
 .inner-box{
   margin: 10px;
   padding: 10px;
